Creacion sistema character, combat y activity.
