# backend/src/app.js
@@ -1,4 +1,4 @@
-//src\app.js
+//backend\src\app.js
 require('dotenv').config();
 const swaggerUi = require('swagger-ui-express');
 const YAML = require('yamljs');
@@ -6,8 +6,8 @@ const swaggerDocument = YAML.load('./src/swagger.yaml');
 const express = require('express');
 const bodyParser = require('body-parser');
 const cors = require('cors');
-const authRouter = require('./routes/auth');
-const tasksRouter = require('./routes/tasks');
+const authRouter = require('./routes/authRoutes');
+const characterRoutes = require('./routes/characterRoutes');
 
 const app = express();
 const PORT = process.env.PORT || 3000;
@@ -21,7 +21,7 @@ app.use(cors());
 app.use(bodyParser.json());
 
 // Rutas
-app.use('/api/tasks', tasksRouter);
+app.use('/api/characters', characterRoutes);
 app.use('/api/auth', authRouter);
 
 // Iniciar servidor
